Overflow avoided

--- a/src/pages/UserCards/style/user-cards.scss
+++ b/src/pages/UserCards/style/user-cards.scss
@@ -310,6 +310,7 @@
     /* Card Accordions */
     .card-accordions {
         max-height: 100%;
+        overflow: unset;
     }
 }
 
